중복 실행방지, 로컬pc 환경 모델 사용을 위한 코드 적용